--- a/src/app/components/column-filter/column-filter.component.html
+++ b/src/app/components/column-filter/column-filter.component.html
@@ -8,15 +8,25 @@
     <!-- <i class="fas fa-filter"></i> -->
     <svg *ngIf="!hasActiveFilter()" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg" data-p-icon="filter" class="ng-tns-c389539309-46 p-icon ng-star-inserted" pc164=""><g clip-path="url(#pui_id_9)"><path d="M8.64708 14H5.35296C5.18981 13.9979 5.03395 13.9321 4.91858 13.8167C4.8032 13.7014 4.73745 13.5455 4.73531 13.3824V7L0.329431 0.98C0.259794 0.889466 0.217389 0.780968 0.20718 0.667208C0.19697 0.553448 0.219379 0.439133 0.271783 0.337647C0.324282 0.236453 0.403423 0.151519 0.500663 0.0920138C0.597903 0.0325088 0.709548 0.000692754 0.823548 0H13.1765C13.2905 0.000692754 13.4021 0.0325088 13.4994 0.0920138C13.5966 0.151519 13.6758 0.236453 13.7283 0.337647C13.7807 0.439133 13.8031 0.553448 13.7929 0.667208C13.7826 0.780968 13.7402 0.889466 13.6706 0.98L9.26472 7V13.3824C9.26259 13.5455 9.19683 13.7014 9.08146 13.8167C8.96609 13.9321 8.81022 13.9979 8.64708 14ZM5.97061 12.7647H8.02943V6.79412C8.02878 6.66289 8.07229 6.53527 8.15296 6.43177L11.9412 1.23529H2.05884L5.86355 6.43177C5.94422 6.53527 5.98773 6.66289 5.98708 6.79412L5.97061 12.7647Z" fill="currentColor"></path></g><defs><clipPath id="url(#pui_id_9)"><rect width="14" height="14" fill="white"></rect></clipPath></defs></svg>
 
-    <svg *ngIf="hasActiveFilter()" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg" data-p-icon="filter-fill" class="ng-tns-c389539309-50 p-icon ng-star-inserted" pc2469=""><path d="M13.7274 0.33847C13.6228 0.130941 13.4095 0 13.1764 0H0.82351C0.590451 0 0.377157 0.130941 0.272568 0.33847C0.167157 0.545999 0.187746 0.795529 0.325275 0.98247L4.73527 6.99588V13.3824C4.73527 13.7233 5.01198 14 5.35292 14H8.64704C8.98798 14 9.26469 13.7233 9.26469 13.3824V6.99588L13.6747 0.98247C13.8122 0.795529 13.8328 0.545999 13.7274 0.33847Z" fill="currentColor"></path></svg>
+    <svg *ngIf="hasActiveFilter()" 
+         width="14" 
+         height="14" 
+         viewBox="0 0 512 512" 
+         xmlns="http://www.w3.org/2000/svg" 
+         class="active-filter-icon blink-animation">
+      <g>
+        <path d="M215.546 85.327H53.282c-18.073 0-28.679 20.379-18.31 35.187.133.199-3.448-4.682 130.024 177.006 5.921 8.587 4.149-.599 4.149 190.987 0 19.245 21.993 30.358 37.542 18.791 57.536-43.372 71.516-48.257 71.516-70.955 0-133.909-1.721-130.311 4.149-138.823l27.851-37.923c-70.082-25.496-112.087-99.608-94.657-174.27z" fill="#dc143c" opacity="1"></path>
+        <path d="M281.951 30.166c-75.076 67.31-38.685 187.35 55.962 206.05 75.479 15.948 143.193-43.867 143.193-116.945 0-102.594-122.364-157.159-199.155-89.105zM400.48 136.97c9.515 9.466 2.715 25.676-10.603 25.676-8.014 0-10.022-3.79-28.462-22.158-18.064 17.984-20.27 22.158-28.472 22.158-13.349 0-20.063-16.264-10.603-25.676l17.769-17.699-17.769-17.699c-14.107-14.035 7.142-35.322 21.216-21.297l17.859 17.779 17.849-17.779c14.074-14.025 35.331 7.254 21.216 21.297l-17.769 17.699z" fill="#dc143c" opacity="1"></path>
+      </g>
+    </svg>
   </button>
 
 
 
   <div class="filter-dropdown" *ngIf="showDropdown">
     <div class="filter-dropdown-content">
-      <!-- Global Match Mode Toggle (only shown when multiple rules exist) -->
-      <div class="global-match-mode-toggle" *ngIf="hasMultipleRules()">
+      <!-- Global Match Mode Toggle (only shown when multiple rules are allowed and exist) -->
+      <div class="global-match-mode-toggle" *ngIf="allowMultipleRules && hasMultipleRules()">
         <label class="match-mode-label">Combine rules:</label>
         <div class="match-mode-switch-wrapper">
           <div 
@@ -104,9 +114,9 @@
             <i class="fas fa-chevron-down dropdown-arrow"></i>
           </div>
 
-          <!-- Remove Rule button (only for additional rules) -->
+          <!-- Remove Rule button (only for additional rules and when multiple rules are allowed) -->
           <button 
-            *ngIf="filterRules.length > 1 && i > 0"
+            *ngIf="allowMultipleRules && filterRules.length > 1 && i > 0"
             class="remove-rule-btn"
             (click)="removeRule(i)"
             type="button"
@@ -116,8 +126,13 @@
         </div>
       </div>
 
-      <!-- Add Rule button -->
-      <button class="add-rule-btn" (click)="addRule()" type="button" aria-label="Add another filter rule">
+      <!-- Add Rule button (only when multiple rules are allowed) -->
+      <button 
+        *ngIf="allowMultipleRules"
+        class="add-rule-btn" 
+        (click)="addRule()" 
+        type="button" 
+        aria-label="Add another filter rule">
         <span class="plus-icon">+</span> Add Rule
       </button>
 
